--- a/Draw/Dice/View/DiceBetView/DiceBetView~ipad.xib
+++ b/Draw/Dice/View/DiceBetView/DiceBetView~ipad.xib
@@ -42,6 +42,7 @@
 						<int key="NSvFlags">283</int>
 						<string key="NSFrame">{{24, 24}, {569, 376}}</string>
 						<reference key="NSSuperview" ref="42690186"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="497256929"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -52,6 +53,7 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{86, 292}, {196, 82}}</string>
 						<reference key="NSSuperview" ref="42690186"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="539270328"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -85,6 +87,7 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{106, 304}, {56, 60}}</string>
 						<reference key="NSSuperview" ref="42690186"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="183914380"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -99,6 +102,7 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{176, 292}, {86, 48}}</string>
 						<reference key="NSSuperview" ref="42690186"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="450434552"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -114,21 +118,23 @@
 						<nil key="IBUIHighlightedColor"/>
 						<int key="IBUIBaselineAdjustment">0</int>
 						<float key="IBUIMinimumFontSize">10</float>
-						<object class="IBUIFontDescription" key="IBUIFontDescription" id="819512810">
+						<object class="IBUIFontDescription" key="IBUIFontDescription" id="540020722">
 							<int key="type">1</int>
-							<double key="pointSize">24</double>
+							<double key="pointSize">36</double>
 						</object>
-						<object class="NSFont" key="IBUIFont" id="387728547">
+						<object class="NSFont" key="IBUIFont" id="648296556">
 							<string key="NSName">Helvetica</string>
-							<double key="NSSize">24</double>
+							<double key="NSSize">36</double>
 							<int key="NSfFlags">16</int>
 						</object>
+						<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 					</object>
 					<object class="IBUILabel" id="450434552">
 						<reference key="NSNextResponder" ref="42690186"/>
 						<int key="NSvFlags">319</int>
-						<string key="NSFrame">{{176, 332}, {92, 42}}</string>
+						<string key="NSFrame">{{176, 332}, {102, 42}}</string>
 						<reference key="NSSuperview" ref="42690186"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="290859918"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -136,26 +142,28 @@
 						<int key="IBUIContentMode">7</int>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-						<string key="IBUIText">1赔10</string>
+						<string key="IBUIText">1赔10.5</string>
 						<reference key="IBUITextColor" ref="908465879"/>
 						<nil key="IBUIHighlightedColor"/>
 						<int key="IBUIBaselineAdjustment">0</int>
 						<float key="IBUIMinimumFontSize">10</float>
-						<object class="IBUIFontDescription" key="IBUIFontDescription" id="560241203">
+						<object class="IBUIFontDescription" key="IBUIFontDescription" id="428129263">
 							<int key="type">1</int>
-							<double key="pointSize">18</double>
+							<double key="pointSize">29</double>
 						</object>
-						<object class="NSFont" key="IBUIFont" id="850018291">
+						<object class="NSFont" key="IBUIFont" id="524593040">
 							<string key="NSName">Helvetica</string>
-							<double key="NSSize">18</double>
+							<double key="NSSize">29</double>
 							<int key="NSfFlags">16</int>
 						</object>
+						<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 					</object>
 					<object class="IBUILabel" id="497256929">
 						<reference key="NSNextResponder" ref="42690186"/>
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{186, 50}, {238, 42}}</string>
 						<reference key="NSSuperview" ref="42690186"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="932901105"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -171,11 +179,11 @@
 						<int key="IBUITextAlignment">1</int>
 						<object class="IBUIFontDescription" key="IBUIFontDescription">
 							<int key="type">1</int>
-							<double key="pointSize">32</double>
+							<double key="pointSize">45</double>
 						</object>
 						<object class="NSFont" key="IBUIFont">
 							<string key="NSName">Helvetica</string>
-							<double key="NSSize">32</double>
+							<double key="NSSize">45</double>
 							<int key="NSfFlags">16</int>
 						</object>
 					</object>
@@ -184,6 +192,7 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{557, 0}, {56, 56}}</string>
 						<reference key="NSSuperview" ref="42690186"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="206223514"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -208,6 +217,7 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{82, 110}, {442, 94}}</string>
 						<reference key="NSSuperview" ref="42690186"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="937968453"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -221,21 +231,16 @@
 						<int key="IBUIBaselineAdjustment">0</int>
 						<float key="IBUIMinimumFontSize">10</float>
 						<int key="IBUINumberOfLines">0</int>
-						<object class="IBUIFontDescription" key="IBUIFontDescription" id="486591384">
-							<int key="type">1</int>
-							<double key="pointSize">25</double>
-						</object>
-						<object class="NSFont" key="IBUIFont" id="816266626">
-							<string key="NSName">Helvetica</string>
-							<double key="NSSize">25</double>
-							<int key="NSfFlags">16</int>
-						</object>
+						<reference key="IBUIFontDescription" ref="540020722"/>
+						<reference key="IBUIFont" ref="648296556"/>
+						<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 					</object>
 					<object class="IBUILabel" id="937968453">
 						<reference key="NSNextResponder" ref="42690186"/>
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{82, 210}, {96, 60}}</string>
 						<reference key="NSSuperview" ref="42690186"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="297350656"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -248,14 +253,15 @@
 						<nil key="IBUIHighlightedColor"/>
 						<int key="IBUIBaselineAdjustment">0</int>
 						<float key="IBUIMinimumFontSize">10</float>
-						<reference key="IBUIFontDescription" ref="486591384"/>
-						<reference key="IBUIFont" ref="816266626"/>
+						<reference key="IBUIFontDescription" ref="540020722"/>
+						<reference key="IBUIFont" ref="648296556"/>
 					</object>
 					<object class="IBUIImageView" id="297350656">
 						<reference key="NSNextResponder" ref="42690186"/>
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{176, 215}, {46, 50}}</string>
 						<reference key="NSSuperview" ref="42690186"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="917748991"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -270,6 +276,7 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{258, 218}, {102, 42}}</string>
 						<reference key="NSSuperview" ref="42690186"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="755719260"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -282,14 +289,15 @@
 						<nil key="IBUIHighlightedColor"/>
 						<int key="IBUIBaselineAdjustment">0</int>
 						<float key="IBUIMinimumFontSize">10</float>
-						<reference key="IBUIFontDescription" ref="486591384"/>
-						<reference key="IBUIFont" ref="816266626"/>
+						<reference key="IBUIFontDescription" ref="540020722"/>
+						<reference key="IBUIFont" ref="648296556"/>
 					</object>
 					<object class="IBUIButton" id="290859918">
 						<reference key="NSNextResponder" ref="42690186"/>
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{314, 292}, {196, 82}}</string>
 						<reference key="NSSuperview" ref="42690186"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="330434247"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -310,6 +318,7 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{334, 304}, {56, 60}}</string>
 						<reference key="NSSuperview" ref="42690186"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="694377089"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -324,6 +333,7 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{404, 292}, {86, 48}}</string>
 						<reference key="NSSuperview" ref="42690186"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="1002676463"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -336,34 +346,37 @@
 						<nil key="IBUIHighlightedColor"/>
 						<int key="IBUIBaselineAdjustment">0</int>
 						<float key="IBUIMinimumFontSize">10</float>
-						<reference key="IBUIFontDescription" ref="819512810"/>
-						<reference key="IBUIFont" ref="387728547"/>
+						<reference key="IBUIFontDescription" ref="540020722"/>
+						<reference key="IBUIFont" ref="648296556"/>
+						<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 					</object>
 					<object class="IBUILabel" id="1002676463">
 						<reference key="NSNextResponder" ref="42690186"/>
 						<int key="NSvFlags">319</int>
-						<string key="NSFrame">{{404, 332}, {92, 42}}</string>
+						<string key="NSFrame">{{404, 332}, {102, 42}}</string>
 						<reference key="NSSuperview" ref="42690186"/>
-						<reference key="NSNextKeyView"/>
+						<reference key="NSWindow"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<int key="IBUIContentMode">7</int>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-						<string key="IBUIText">1赔10</string>
+						<string key="IBUIText">1赔0.15</string>
 						<reference key="IBUITextColor" ref="908465879"/>
 						<nil key="IBUIHighlightedColor"/>
 						<int key="IBUIBaselineAdjustment">0</int>
 						<float key="IBUIMinimumFontSize">10</float>
-						<reference key="IBUIFontDescription" ref="560241203"/>
-						<reference key="IBUIFont" ref="850018291"/>
+						<reference key="IBUIFontDescription" ref="428129263"/>
+						<reference key="IBUIFont" ref="524593040"/>
+						<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 					</object>
 					<object class="IBUILabel" id="917748991">
 						<reference key="NSNextResponder" ref="42690186"/>
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{228, 218}, {26, 42}}</string>
 						<reference key="NSSuperview" ref="42690186"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="521682707"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -376,12 +389,13 @@
 						<nil key="IBUIHighlightedColor"/>
 						<int key="IBUIBaselineAdjustment">0</int>
 						<float key="IBUIMinimumFontSize">10</float>
-						<reference key="IBUIFontDescription" ref="486591384"/>
-						<reference key="IBUIFont" ref="816266626"/>
+						<reference key="IBUIFontDescription" ref="540020722"/>
+						<reference key="IBUIFont" ref="648296556"/>
 					</object>
 				</array>
 				<string key="NSFrameSize">{613, 400}</string>
 				<reference key="NSSuperview"/>
+				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="558577044"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<object class="NSColor" key="IBUIBackgroundColor">
@@ -703,7 +717,93 @@
 			<nil key="sourceID"/>
 			<int key="maxID">40</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes"/>
+		<object class="IBClassDescriber" key="IBDocument.Classes">
+			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
+				<object class="IBPartialClassDescription">
+					<string key="className">DiceBetView</string>
+					<string key="superclassName">UIView</string>
+					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="anteCoinsLabel">HKGirlFontLabel</string>
+						<string key="anteLabel">HKGirlFontLabel</string>
+						<string key="betLoseButton">UIButton</string>
+						<string key="betWinButton">UIButton</string>
+						<string key="bgImageView">UIImageView</string>
+						<string key="loseLabel">HKGirlFontLabel</string>
+						<string key="loseOddsLabel">HKGirlFontLabel</string>
+						<string key="noteLabel">HKGirlFontLabel</string>
+						<string key="titleLabel">HKGirlFontLabel</string>
+						<string key="winLabel">HKGirlFontLabel</string>
+						<string key="winOddsLabel">HKGirlFontLabel</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<object class="IBToOneOutletInfo" key="anteCoinsLabel">
+							<string key="name">anteCoinsLabel</string>
+							<string key="candidateClassName">HKGirlFontLabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="anteLabel">
+							<string key="name">anteLabel</string>
+							<string key="candidateClassName">HKGirlFontLabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="betLoseButton">
+							<string key="name">betLoseButton</string>
+							<string key="candidateClassName">UIButton</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="betWinButton">
+							<string key="name">betWinButton</string>
+							<string key="candidateClassName">UIButton</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="bgImageView">
+							<string key="name">bgImageView</string>
+							<string key="candidateClassName">UIImageView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="loseLabel">
+							<string key="name">loseLabel</string>
+							<string key="candidateClassName">HKGirlFontLabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="loseOddsLabel">
+							<string key="name">loseOddsLabel</string>
+							<string key="candidateClassName">HKGirlFontLabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="noteLabel">
+							<string key="name">noteLabel</string>
+							<string key="candidateClassName">HKGirlFontLabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="titleLabel">
+							<string key="name">titleLabel</string>
+							<string key="candidateClassName">HKGirlFontLabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="winLabel">
+							<string key="name">winLabel</string>
+							<string key="candidateClassName">HKGirlFontLabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="winOddsLabel">
+							<string key="name">winOddsLabel</string>
+							<string key="candidateClassName">HKGirlFontLabel</string>
+						</object>
+					</dictionary>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/DiceBetView.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">FontLabel</string>
+					<string key="superclassName">UILabel</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/FontLabel.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">HKGirlFontLabel</string>
+					<string key="superclassName">FontLabel</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/HKGirlFontLabel.h</string>
+					</object>
+				</object>
+			</array>
+		</object>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
