--- a/Draw/Dice/View/PopupView/ChatView~ipad.xib
+++ b/Draw/Dice/View/PopupView/ChatView~ipad.xib
@@ -11,12 +11,13 @@
 			<string key="NS.object.0">1181</string>
 		</object>
 		<array key="IBDocument.IntegratedClassDependencies">
+			<string>IBUIView</string>
+			<string>IBUIImageView</string>
+			<string>IBProxyObject</string>
+			<string>IBUITableView</string>
+			<string>IBUIPageControl</string>
 			<string>IBUIScrollView</string>
 			<string>IBUIButton</string>
-			<string>IBUIImageView</string>
-			<string>IBUIView</string>
-			<string>IBUITableView</string>
-			<string>IBProxyObject</string>
 		</array>
 		<array key="IBDocument.PluginDependencies">
 			<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -41,7 +42,7 @@
 					<object class="IBUIImageView" id="799711035">
 						<reference key="NSNextResponder" ref="720298618"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{20, 22}, {486, 530}}</string>
+						<string key="NSFrame">{{20, 25}, {486, 547}}</string>
 						<reference key="NSSuperview" ref="720298618"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="522709830"/>
@@ -52,7 +53,7 @@
 					<object class="IBUIScrollView" id="522709830">
 						<reference key="NSNextResponder" ref="720298618"/>
 						<int key="NSvFlags">274</int>
-						<string key="NSFrame">{{40, 38}, {444, 70}}</string>
+						<string key="NSFrame">{{40, 58}, {444, 70}}</string>
 						<reference key="NSSuperview" ref="720298618"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="79914890"/>
@@ -71,7 +72,7 @@
 					<object class="IBUITableView" id="199380516">
 						<reference key="NSNextResponder" ref="720298618"/>
 						<int key="NSvFlags">274</int>
-						<string key="NSFrame">{{40, 116}, {444, 420}}</string>
+						<string key="NSFrame">{{40, 136}, {444, 420}}</string>
 						<reference key="NSSuperview" ref="720298618"/>
 						<reference key="NSWindow"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
@@ -88,7 +89,7 @@
 					<object class="IBUIButton" id="79914890">
 						<reference key="NSNextResponder" ref="720298618"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{474, 0}, {50, 50}}</string>
+						<string key="NSFrame">{{476, 0}, {50, 50}}</string>
 						<reference key="NSSuperview" ref="720298618"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="199380516"/>
@@ -123,8 +124,22 @@
 							<int key="NSfFlags">16</int>
 						</object>
 					</object>
+					<object class="IBUIPageControl" id="72694579">
+						<reference key="NSNextResponder" ref="720298618"/>
+						<int key="NSvFlags">1316</int>
+						<object class="NSPSMatrix" key="NSFrameMatrix"/>
+						<string key="NSFrame">{{243, 25}, {38, 36}}</string>
+						<reference key="NSSuperview" ref="720298618"/>
+						<reference key="NSWindow"/>
+						<string key="NSReuseIdentifierKey">_NS:9</string>
+						<bool key="IBUIOpaque">NO</bool>
+						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
+						<int key="IBUIContentHorizontalAlignment">0</int>
+						<int key="IBUIContentVerticalAlignment">0</int>
+						<int key="IBUINumberOfPages">3</int>
+					</object>
 				</array>
-				<string key="NSFrameSize">{524, 552}</string>
+				<string key="NSFrameSize">{526, 572}</string>
 				<reference key="NSSuperview"/>
 				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="799711035"/>
@@ -158,6 +173,14 @@
 						<reference key="destination" ref="199380516"/>
 					</object>
 					<int key="connectionID">10</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">pageController</string>
+						<reference key="source" ref="720298618"/>
+						<reference key="destination" ref="72694579"/>
+					</object>
+					<int key="connectionID">16</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
@@ -220,6 +243,7 @@
 							<reference ref="522709830"/>
 							<reference ref="79914890"/>
 							<reference ref="199380516"/>
+							<reference ref="72694579"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -243,12 +267,18 @@
 						<reference key="object" ref="522709830"/>
 						<reference key="parent" ref="720298618"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">15</int>
+						<reference key="object" ref="72694579"/>
+						<reference key="parent" ref="720298618"/>
+					</object>
 				</array>
 			</object>
 			<dictionary class="NSMutableDictionary" key="flattenedProperties">
 				<string key="-1.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="-2.CustomClassName">UIResponder</string>
 				<string key="-2.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="15.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="3.CustomClassName">ChatView</string>
 				<string key="3.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="4.CustomClassName">FontButton</string>
@@ -261,7 +291,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">14</int>
+			<int key="maxID">16</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
